styles/header.css
header {
    background-color: tomato;
    color: white;
}

#pageHeaderTop {
    background-color: rgb(44, 44, 44);
    display: flex;
    flex-direction: row;
    justify-content: right;
    gap: 10px;
    padding: 0.75rem 10%;
    font-size: clamp(0.75rem, 1.5vw, 1rem);
}

#signup {
    border-right: solid 1px gray;
    margin-right: 5px;
}

#pageHeaderBottom {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
    padding: 1.75rem 10%;
}

#logo a{
    display:flex;
    flex-direction: row;
    align-items: center;
    text-decoration: none;
    color: white;
    gap: 10px;
    font-family: 'Roboto', sans-serif; /* Logo Font */
}

#search-bar input{
    padding: 10px 20px;
    border: none;
}

/* Media Queries for mobile view */
@media (max-width: 768px) {
    pageHeaderTop {
        padding: 0.75rem 5%;
    }

    #pageHeaderBottom {
        padding: 1.75rem 5%;
    }

    #logo a h2{
        display: none;
    }

    #notification a span{
        display: none;
    }

    #help a span{
        display: none;
    }
}

